Second version, log in, log out and creating an account

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,8 @@
 <body>
     <h1>Etusivu</h1>
     <p>Tervetuloa sovellukseen!<p>
-    <a href="form">kirjaudu</a>
+    <a href="create">Luo tunnus</a> |
+    <a href="form">Kirjaudu</a>
 </body>
 
 </html>
