--- a/templates/form.html
+++ b/templates/form.html
@@ -3,12 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Etusivu</title>
+  <title>Login</title>
 </head>
 
 <body>
     {% if session.username %}
     <p>Olet kirjautunut nimellä {{ session.username }}</p>
+    <a href="/">Etusivu</a> |
     <a href="/logout">Kirjaudu ulos</a>
     {% else %}
     <form action="/login" method="POST">
@@ -18,6 +19,8 @@
     <input type="password" name="password"></p>
     <input type="submit" value="Kirjaudu">
     </form>
+    <a href="/">Etusivu</a> |
+    <a href="create">Luo tunnus</a>
     {% endif %}
 </body>
 
