--- a/templates/create.html
+++ b/templates/create.html
@@ -11,9 +11,12 @@
     <p>Tunnus:<br>
     <input type="text" name="username"></p>
     <p>Salasana:<br>
-    <input type="password" name="password"></p>
+    <input type="password" name="password1"></p>
+    <p>Salasana uudelleen:<br>
+    <input type="password" name="password2"></p>
     <input type="submit" value="Luo tunnus">
     </form>
+    <br>
     <a href="/">Etusivu</a> |
     <a href="form">Kirjaudu</a>
 </body>
