--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,8 @@
   <title>Etusivu</title>
 </head>
 
-<body>
+  {% extends "layout.html" %}
+  {% block body %}
     <h1>Etusivu</h1>
     <p>Tervetuloa sovellukseen!<p>
     {% if session.username %}
@@ -47,6 +48,6 @@
     </tr>
     {% endfor %} 
     </table>
-</body>
+    {% endblock %}
 
 </html>
