--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,11 @@
     <a href="form">Kirjaudu</a>
     {% endif %}
     <p>Kurssi tarjonta:</p>
+    <form action="/search" method="GET">
+      Hae kurssin nimellä: <input type="text" name="course">
+      <input type="submit" value="Lähetä">
+    </form>
+    <br>
     <table>
     <tr>
       <th>Kurssi</th>
