--- a/templates/enroll.html
+++ b/templates/enroll.html
@@ -14,6 +14,7 @@
         {{course.course_name}} <br>
         {{course.event_time}}<br>
         {{course.place}}<br>
+        {{course.difficulty}}<br>
         <input type="submit" value="Ilmoittaudu">
         <input type="hidden" name="id" value="{{ id }}">
         <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
