--- a/templates/form.html
+++ b/templates/form.html
@@ -11,9 +11,9 @@
     <h3>Kirjadu sisään</h3>
     <form action="/login" method="POST">
     <p>Tunnus:<br>
-    <input type="text" name="username"></p>
+    <input type="text" name="username" required ></p>
     <p>Salasana:<br>
-    <input type="password" name="password"></p>
+    <input type="password" name="password" required ></p>
     <input type="submit" value="Kirjaudu">
     </form>
     <br>
