--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
     <p>Kurssi tarjonta:</p>
     <form action="/search" method="GET">
       Hae kurssin nimellä: <input type="text" name="course">
-      <input type="submit" value="Lähetä">
+      <input type="submit" value="Hae">
     </form>
     <br>
     <table>
